<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_pub</name>
  <version>0.0.0</version>
  <description>Package for publishing map and wireless data as pointcloud</description>
  <maintainer email="arroyo.antom@gmail.com">AntoArroyo</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE Version 3</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xml.etree.ElementTree</depend>
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
